# sab-extractor

./: .gitignore  README.md
.github/workflows/: build.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json
apps/desktop/electron/: constants.cjs  ipc.cjs  main.cjs  preload.cjs  pythonBridge.cjs  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md
engine/: README.md  pyproject.toml  run_cli.py  search_stories.py
engine/probes/: cdata_diag.js  cdata_diag2.js  cdata_diag3.js  cdata_diag4.js  cdata_diag5.js  cdata_diag6.js  cdata_diag7.js  cdata_diag8.js  cdata_diag9.js  cdata_probe.js  il2cpp_bridge.js
engine/src/sab_engine/: __init__.py  cli.py
engine/src/sab_engine/application/: __init__.py  build_catalog_use_case.py  cdata_capture_use_case.py  image_extraction_use_case.py  story_extraction_use_case.py
engine/src/sab_engine/domain/: __init__.py  cdata_categories.py  models.py
engine/src/sab_engine/infrastructure/: __init__.py
engine/src/sab_engine/infrastructure/frida/: __init__.py  monitor_collector.py  process_finder.py  runtime.py
engine/src/sab_engine/infrastructure/persistence/: __init__.py  cdata_capture_writer.py
engine/src/sab_engine/infrastructure/unity/: __init__.py  bundle_extractor.py  constants.py  path_resolver.py  runtime.py  text_extractor.py
engine/src/sab_engine/interfaces/: __init__.py  cli.py
scripts/: add_missing.py  check4110.py
(+9 files in other folders)
