[package]
name = "sab-extractor"
version = "0.3.1"
edition = "2021"

[package.metadata.tauri]
targets = ["x86_64-pc-windows-msvc"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
